@@ -316,6 +316,7 @@ following image formats are supported:
 @item DT$ Coherent Audio     @tab      @tab X
 @item ATRAC 3                @tab      @tab X
 @item Monkey's Audio         @tab      @tab X @tab Only versions 3.97-3.99 are supported
+@item Nellymoser ASAO        @tab      @tab X
 @end multitable
 
 @code{X} means that encoding (resp. decoding) is supported.
